--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <link rel="stylesheet" href="./style.css" />
     <title>GitHub team repository</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Hello Java</h1>
+  </body>
 </html>
